<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project basedir="." default="build" name="cyberdam">

	<property file="user.properties" />

	<property environment="env" />
	<property name="debuglevel" value="source,lines,vars" />
	<property name="target" value="1.5" />
	<property name="source" value="1.5" />
	<property name="classes.dir" value="build/WEB-INF/classes" />
	<property name="dist.dir" value="dist" />
	<property name="tomcat.home" value="../../../tools/tomcat-6.0.14_cd" />
	<path id="Apache Tomcat v6.0 [Apache Tomcat v6.0].libraryclasspath">
		<pathelement location="${tomcat.home}/lib/servlet-api.jar" />
		<pathelement location="${tomcat.home}/lib/jsp-api.jar" />
	</path>
	<path id="Web App Libraries.libraryclasspath">
		<pathelement location="web/WEB-INF/lib/acegi-security-1.0.4.jar" />
		<pathelement location="web/WEB-INF/lib/antlr-2.7.6.jar" />
		<pathelement location="web/WEB-INF/lib/cglib-nodep-2.1_3.jar" />
		<pathelement location="web/WEB-INF/lib/common-annotations.jar" />
		<pathelement location="web/WEB-INF/lib/commons-beanutils-1.7.0.jar" />
		<pathelement location="web/WEB-INF/lib/commons-codec.jar" />
		<pathelement location="web/WEB-INF/lib/commons-collections.jar" />
		<pathelement location="web/WEB-INF/lib/commons-dbcp.jar" />
		<pathelement location="web/WEB-INF/lib/commons-digester-1.8.jar" />
		<pathelement location="web/WEB-INF/lib/commons-fileupload.jar" />
		<pathelement location="web/WEB-INF/lib/commons-io.jar" />
		<pathelement location="web/WEB-INF/lib/commons-logging.jar" />
		<pathelement location="web/WEB-INF/lib/dom4j-1.6.1.jar" />
		<pathelement location="web/WEB-INF/lib/dwr.jar" />
		<pathelement location="web/WEB-INF/lib/ehcache-1.3.0.jar" />
		<pathelement location="web/WEB-INF/lib/hibernate-annotations.jar" />
		<pathelement location="web/WEB-INF/lib/hibernate-commons-annotations.jar" />
		<pathelement location="web/WEB-INF/lib/hibernate-validator.jar" />
		<pathelement location="web/WEB-INF/lib/hibernate3.jar" />
		<pathelement location="web/WEB-INF/lib/javacsv.jar" />
		<pathelement location="web/WEB-INF/lib/jaxen-1.1-beta-7.jar" />
		<pathelement location="web/WEB-INF/lib/jaxb-impl.jar" />
		<pathelement location="web/WEB-INF/lib/js.jar" />
		<pathelement location="web/WEB-INF/lib/json.jar" />
		<pathelement location="web/WEB-INF/lib/jstl.jar" />
		<pathelement location="web/WEB-INF/lib/jta.jar" />
		<pathelement location="web/WEB-INF/lib/log4j-1.2.14.jar" />
		<pathelement location="web/WEB-INF/lib/ognl-2.6.9.jar" />
		<pathelement location="web/WEB-INF/lib/persistence.jar" />
		<pathelement location="web/WEB-INF/lib/spring-binding-1.0.5.jar" />
		<pathelement location="web/WEB-INF/lib/spring-modules-cache.jar" />
		<pathelement location="web/WEB-INF/lib/spring-webmvc.jar" />
		<pathelement location="web/WEB-INF/lib/spring.jar" />
		<pathelement location="web/WEB-INF/lib/struts-menu-2.4.3.jar" />
		<pathelement location="web/WEB-INF/lib/standard.jar" />
		<pathelement location="web/WEB-INF/lib/tiles-api-2.0.5.jar" />
		<pathelement location="web/WEB-INF/lib/tiles-core-2.0.5.jar" />
		<pathelement location="web/WEB-INF/lib/tiles-jsp-2.0.5.jar" />
		<pathelement location="web/WEB-INF/lib/velocity-1.5.jar" />
		<pathelement location="web/WEB-INF/classes" />
	</path>
	<path id="cyberdam.classpath">
		<pathelement location="${classes.dir}" />
		<path refid="Apache Tomcat v6.0 [Apache Tomcat v6.0].libraryclasspath" />
		<path refid="Web App Libraries.libraryclasspath" />
		<pathelement location="lib/testing/unitils-1.0-rc-4.jar" />
		<pathelement location="lib/testing/commons-lang-2.2.jar" />
		<pathelement location="lib/testing/dbunit-2.2.jar" />
		<pathelement location="lib/testing/easymock2.2-.jar" />
		<pathelement location="lib/testing/easymockclassextension-2.2.jar" />
		<pathelement location="lib/testing/junit-addons-1.4.jar" />
		<pathelement location="lib/testing/testng-5.1-jdk15.jar" />
		<pathelement location="lib/testing/spring-test.jar" />
		<pathelement location="lib/testing/hsqldb.jar" />
		<pathelement location="lib/jaxb/jaxb-api.jar" />		
		<pathelement location="lib/jsr173/jsr173_api.jar" />		
		<pathelement location="lib/servlet/servlet-api.jar" />		
		<pathelement location="lib/servlet/jsp-api.jar" />		
	</path>
	<target name="init">
		<mkdir dir="${classes.dir}" />
		<copy includeemptydirs="false" todir="${classes.dir}">
			<fileset dir="src/java" excludes="**/*.launch, **/*.java" />
		</copy>
	</target>
	<target name="clean">
		<delete dir="${classes.dir}" failonerror="false"/>
		<delete includeemptydirs="true" failonerror="false">
		    <fileset dir="build" includes="**/*"/>
		</delete>
		<delete includeemptydirs="true" failonerror="false">
		    <fileset dir="${dist.dir}" includes="**/*"/>
		</delete>
	</target>
	<target depends="init" name="build">
		<echo message="${ant.project.name}: ${ant.file}" />
		<javac debug="true" debuglevel="${debuglevel}" destdir="${classes.dir}" source="${source}" target="${target}">
			<src path="src/java" />
			<classpath refid="cyberdam.classpath" />
		</javac>
		<copy todir="build">
			<fileset dir="web">
				<exclude name="**/*.java" />
				<exclude name="**/.svn/*.*" />
			</fileset>
		</copy>
	</target>

	<target name="dist" depends="clean, build" description="Creates war file">
		<mkdir dir="${dist.dir}" />
		<jar jarfile="${dist.dir}/cyberdam.war" index="true">
			<fileset dir="build">
				<include name="**/*.*" />
			</fileset>
		</jar>
		<copy todir="${dist.dir}/dbscripts">
			<fileset dir="db/scripts23" >
			</fileset>
		</copy>
		<copy file="web/META-INF/context-example.xml"
			todir="${dist.dir}" />
		<copy todir="${dist.dir}/sources/project/src/java" >
			<fileset dir="src/java" >
			</fileset>
		</copy>
		<copy todir="${dist.dir}/sources/project/lib" >
			<fileset dir="lib" >
			</fileset>
		</copy>
		<copy todir="${dist.dir}/sources/project/web" >
			<fileset dir="web" >
			</fileset>
		</copy>
		<copy todir="${dist.dir}/sources/project/test" >
			<fileset dir="test" >
			</fileset>
		</copy>
		<copy todir="${dist.dir}/sources/playground" >
			<fileset dir="../references/playground" >
			</fileset>
		</copy>
		<copy todir="${dist.dir}" >
			<fileset dir="../references/doc/version_2.3" excludes="**.doc **.odt" ><!-- only pdf, no doc! -->
			</fileset>
		</copy>
		<copy todir="${dist.dir}/sources/project" >
			<fileset dir="." includes="build.xml user.properties .project .classpath .springBeans" >
			</fileset>
		</copy>
	</target>

	<target name="generateXSD">
		<java fork="true" classname="com.sun.tools.jxc.SchemaGeneratorFacade">
			<arg file="src/java/nl/cyberdam/domain/Activity.java" />
			<arg file="src/java/nl/cyberdam/domain/Authorities.java" />
			<arg file="src/java/nl/cyberdam/domain/Authority.java" />
			<arg file="src/java/nl/cyberdam/domain/BaseObject.java" />
			<arg file="src/java/nl/cyberdam/domain/FileUploadActivity.java" />
			<arg file="src/java/nl/cyberdam/domain/GameManifest.java" />
			<arg file="src/java/nl/cyberdam/domain/GameSession.java" />
			<arg file="src/java/nl/cyberdam/domain/Group.java" />
			<arg file="src/java/nl/cyberdam/domain/HasUsername.java" />
			<arg file="src/java/nl/cyberdam/domain/LogEntry.java" />
			<arg file="src/java/nl/cyberdam/domain/Message.java" />
			<arg file="src/java/nl/cyberdam/domain/MessageActivity.java" />
			<arg file="src/java/nl/cyberdam/domain/MessageBox.java" />
			<arg file="src/java/nl/cyberdam/domain/NextStepOfPlay.java" />
			<arg file="src/java/nl/cyberdam/domain/Participant.java" />
			<arg file="src/java/nl/cyberdam/domain/Playground.java" />
			<arg file="src/java/nl/cyberdam/domain/PlaygroundObject.java" />
			<arg file="src/java/nl/cyberdam/domain/ProgressActivity.java" />
			<arg file="src/java/nl/cyberdam/domain/Resource.java" />
			<arg file="src/java/nl/cyberdam/domain/Role.java" />
			<arg file="src/java/nl/cyberdam/domain/RoleActivity.java" />
			<arg file="src/java/nl/cyberdam/domain/RoleToPlaygroundMapping.java" />
			<arg file="src/java/nl/cyberdam/domain/SessionResource.java" />
			<arg file="src/java/nl/cyberdam/domain/SessionResourceBox.java" />
			<arg file="src/java/nl/cyberdam/domain/StepOfPlay.java" />
			<arg file="src/java/nl/cyberdam/domain/SystemParameters.java" />
			<arg file="src/java/nl/cyberdam/domain/User.java" />
			<arg file="src/java/nl/cyberdam/domain/Status.java" />
			<arg file="src/java/nl/cyberdam/domain/SessionStatus.java" />
			<arg file="src/java/nl/cyberdam/domain/UserStatus.java" />
			<arg file="src/java/nl/cyberdam/domain/Root.java" />
			<arg file="src/java/nl/cyberdam/domain/LocaleAdapter.java" />
			<arg file="src/java/nl/cyberdam/multilanguage/LanguagePack.java" />
			<arg file="src/java/nl/cyberdam/multilanguage/MultiLanguageMessage.java" />
			<arg file="src/java/nl/cyberdam/domain/GameModel.java" />
			<jvmarg value="-Djava.endorsed.dirs=lib/jaxb;web/WEB-INF/lib" />
		</java>
	</target>

	<taskdef name="xjc" classname="com.sun.tools.xjc.XJCTask">
		<classpath>
			<fileset dir="lib/jaxb" includes="*.jar" />
		</classpath>
	</taskdef>

	<target name="generateJava">
		<xjc schema="web/cyberdam.xsd" package="nl.cyberdam.domain" />
	</target>

</project>
